--- a/mixins/index.html
+++ b/mixins/index.html
@@ -1,2 +1,19 @@
 
 <div id="awesome"></div>
+
+<div id="box"></div>
+
+<!-- for loop -->
+<p class="text-1">Hello</p>
+<p class="text-2">Hello</p>
+<p class="text-3">Hello</p>
+<p class="text-4">Hello</p>
+<p class="text-5">Hello</p>
+
+
+<!-- Use @each to Map Over Items in a List -->
+
+<div class="blue-bg"></div>
+<div class="black-bg"></div>
+<div class="red-bg"></div>
+
