--- a/mixins/index.html
+++ b/mixins/index.html
@@ -17,3 +17,10 @@
 <div class="black-bg"></div>
 <div class="red-bg"></div>
 
+<!-- while loop -->
+
+<p class="text2-1">Hello</p>
+<p class="text2-2">Hello</p>
+<p class="text2-3">Hello</p>
+<p class="text2-4">Hello</p>
+<p class="text2-5">Hello</p>
